[package]
name = "aoc_2022"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
reqwest = {version = "0.11.13" }
tokio = { version = "1.12.0", features = ["full"] } # for our async runtime
dotenv = "0.15.0"
scraper = "0.13.0"
